# lidex

./: .env  .env_template  .gitignore  .gitmodules  Dockerfile  Dockerfile from pdal  Dockerfile.save.1  Dockerfile_conf  MANIFEST.in  README.md  compile_defaults.sh  docker-compose.yml  nginx.conf  nginx_8080_template.conf  nginx_80_template.conf  package.json  pyproject.toml
.github/workflows/: build_deploy_run.yml
build_nginx/: Dockerfile  docker-entrypoint.sh
lidex/: asgi.py  conda_requirements.txt  pdal_cmd.py  settings copy.py  settings.py  urls.py  views.py  wsgi.py
lidex/templates/: map.html
lidex_app/: asgi.py  pdal_cmd.py  settings.py  urls.py  views.py
lidex_app/templates/: map.html
test_coverage/: dsm.tif.aux.xml  dsm_t.tif  dsm_t.tif.aux.xml  dtm.tif.aux.xml  dtm_t.tif  dtm_t.tif.aux.xml  index.sqlite
wegue_custom_app/: Dockerfile  package-lock.json  package_.json  vue.config.dev.js
wegue_custom_app/components/: printDialog.vue
wegue_custom_app/wegue_custom/: README.md  WguApp.vue  WguAppTemplate.vue
wegue_custom_app/wegue_custom/components/: AppFooter.vue  AppHeader.vue  AppSidebar.vue  Geolocator.vue  SampleModule.vue  dbtmanStart.vue  printDialog.vue
wegue_custom_app/wegue_custom/components/lidex/: OlPolygonSelection.js  getPointCloud.vue  profili.vue  profiloControl.vue
wegue_custom_app/wegue_custom/locales/: de.json  en.json  it.json
wegue_custom_app/wegue_custom/static/: app-conf.json  app-conf_tmpl.json
