[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lidex"
version = "0.1"
dependencies = [
    "django>=4.2",  # Replace "X.Y" as appropriate
]
description = "LIDar EXtractor. A Django app for easy publishing and serving human friendly extraction of point cloud coverage"
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    {name = "Enrico Ferreguti", email = "enricofer@gmail.com"},
]

[tool.setuptools]
packages = ["lidex"]

classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",  # Replace "X.Y" as appropriate
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/enricofer/lidex/"